# settings-collector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests.sh
src/settings_collector/: __init__.py  collector.py  defaults.py  exceptions.py  manager.py  setting.py  settings.py  test.py  undef.py  value.py  version.py
src/settings_collector/loaders/: base.py  bottle.py  cherrypy.py  django.py  env.py  flask.py  make_init_imports.sh  pyramid.py  settings.py  turbogears.py
tests/: custom_loaders.py  test_basic.py  test_collector.py  test_defaults.py  test_loaders.py  test_manager.py  test_scopes.py  test_setting.py  test_settings.py  test_test.py  test_two.py  utils.py
